--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_key_store_cryptography
-description: The keystore management and signing package
-version: 1.0.0
+description: This plugin helps you by generating the assymetric RSA key pair, using which you can use encrypt and verify. The keys are generated and persisted in android/ios keystore.
+version: 1.0.1
 homepage: https://github.com/haldarmahesh/flutter_key_store_cryptography
 
 environment:
